...
        card_view:cardBackgroundColor="@color/colorBlack"
        android:padding="@dimen/spacing_extra_large"
        android:layout_margin="@dimen/spacing_large"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/simple_exo_player_view"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:visibility="invisible">

        </com.google.android.exoplayer2.ui.PlayerView>

...
